tempfile/derive_more/tests/compile_fail/as_ref/enum.rs
#[derive(derive_more::AsRef)]
enum Foo {
    Bar(i32),
    Baz(i32),
}

fn main() {}
